hard-gists/809867d7110acbde87af/run.log
=== Docker Run Log for 809867d7110acbde87af ===
Started at: Mi 29. Okt 17:38:41 CET 2025

[2025-10-29 17:38:41] START: Running container for 809867d7110acbde87af
[2025-10-29 17:38:41] SUCCESS: Container a413adb8b29befb4bc5141f48419c11294f91cf6f2f3703733a6a85aabc9012c started for 809867d7110acbde87af
=== Container logs for 809867d7110acbde87af ===
  File "/snippet.py", line 154
    print '{} '.format(' | '.join(lines))
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 809867d7110acbde87af ===
[2025-10-29 17:38:43] INFO: Container a413adb8b29befb4bc5141f48419c11294f91cf6f2f3703733a6a85aabc9012c has stopped
